--- a/member/views/findpw.html
+++ b/member/views/findpw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="findpw.css">
+    <link rel="stylesheet" href="/css/findpw.css">
     <title>비밀번호찾기</title>
 </head>
 <body>
@@ -12,17 +12,17 @@
             <div class="header-container">
                 <div class="header-box1">
                     <div class="logo">
-                        <a href="../main/main.html">
-                            <img src="../admin/img/logo.png" alt="">
+                        <a href="/main/pro/main.html">
+                            <img src="/img/logo.png" alt="">
                         </a>
                     </div>
                     <div class="header-nav">
                         <ul class="header-nav">
                             <li>
-                                <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                                <a href="/hmap/hmap.html">우리동네 헬스장</a>
                             </li>
                             <li>
-                                <a href="../community/community.html">커뮤니티</a>
+                                <a href="/board/pro/community.html">커뮤니티</a>
                             </li>
                         </ul>
                     </div>
@@ -30,10 +30,10 @@
                 <div class="header-box2">
                     <ul class="header-box2">
                         <li>
-                            <a href="../mypage/mypage.html">xxx님</a>
+                            <a href="/member/views/mypage.html">xxx님</a>
                         </li>
                         <li>
-                            <a href="../main/main.html">로그아웃</a>
+                            <a href="/main/pro/main.html">로그아웃</a>
                         </li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="footer-02-01">
                     <div>ⓒ2023 OWW All Rights Reserved</div>
                     <div>
-                        <a href="../main/privacy.html">개인정보처리방침</a>
+                        <a href="/main/pro/privacy.html">개인정보처리방침</a>
                     </div>
                 </div>
             </div>
