--- a/member/views/mypage.html
+++ b/member/views/mypage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/mypage/mypage.css">
-    <script defer src ="/mypage/mypage.js"></script>
+    <link rel="stylesheet" href="/css/mypage.css">
+    <script defer src ="/js/mypage.js"></script>
     <title>회원정보수정</title>
 </head>
 <body>
@@ -13,17 +13,17 @@
             <div class="header-container">
                 <div class="header-box1">
                     <div class="logo">
-                        <a href="../main/main.html">
-                            <img src="../admin/img/logo.png" alt="">
+                        <a href="/main/pro/main.html">
+                            <img src="/img/logo.png" alt="">
                         </a>
                     </div>
                     <div class="header-nav">
                         <ul class="header-nav">
                             <li>
-                                <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                                <a href="/hmap/hmap.html">우리동네 헬스장</a>
                             </li>
                             <li>
-                                <a href="../community/community.html">커뮤니티</a>
+                                <a href="/board/pro/community.html">커뮤니티</a>
                             </li>
                         </ul>
                     </div>
@@ -31,10 +31,10 @@
                 <div class="header-box2">
                     <ul class="header-box2">
                         <li>
-                            <a href="../mypage/mypage.html">xxx님</a>
+                            <a href="/member/views/mypage.html">xxx님</a>
                         </li>
                         <li>
-                            <a href="../main/main.html">로그아웃</a>
+                            <a href="/main/pro/main.html">로그아웃</a>
                         </li>
                     </ul>
                 </div>
@@ -102,7 +102,7 @@
                             수  정
                         </button>
                         <button class="main-container-down-section06-button"  type="button">
-                            <a href="../main/main.html">취  소</a>
+                            <a href="/main/pro/main.html">취  소</a>
                         </button>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="footer-02-01">
                     <div>ⓒ2023 OWW All Rights Reserved</div>
                     <div>
-                        <a href="../main/privacy.html">개인정보처리방침</a>
+                        <a href="/main/pro/privacy.html">개인정보처리방침</a>
                     </div>
                 </div>
             </div>
