알림페이지 관리자,일반회원 추가/ 회원가입,관리자 페이지 수정 ( img css js )

--- a/css/join.css
+++ b/css/join.css
@@ -185,7 +185,7 @@ margin-top: -20px;
   height: 100%;
   padding: 0px;
   background: rgb(247, 248, 250);
-  color: rgb(194, 200, 204);
+  /* color: rgb(194, 200, 204); */
 
   border: 1px solid transparent;
   border-color: rgb(218, 220, 224);
