--- a/member/views/admin.html
+++ b/member/views/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>오운완_관리자</title>
-    <link rel="stylesheet" href="../admin/admin.css">
-    <script defer src ="../admin/admin.js"></script>
+    <link rel="stylesheet" href="../../css/admin.css">
+    <script defer src ="../../js/admin.js"></script>
 </head>
 <body>
     
@@ -13,17 +13,17 @@
         <div class="header-container">
             <div class="header-box1">
                 <div class="logo">
-                    <a href="../main/main.html">
-                        <img src="../admin/img/logo.png" alt="">
+                    <a href="../../main/project/main.html">
+                        <img src="../../img/logo.png" alt="">
                     </a>
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
-                            <a href="../community/community.html">커뮤니티</a>
+                            <a href="../../board/project/community.html">커뮤니티</a>
                         </li>
                     </ul>
                 </div>
@@ -31,16 +31,15 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../admin/admin.html">관리자</a>
+                        <a href="../../member/views/alarm.html">
+                            <img src="../../img/bell3.png" alt="" class="header-box2-img">
+                            </a>
                     </li>
                     <li>
-                        <!-- <a href="../admin/admin.html">알람</a> -->
-                        <a href="../admin/admin.html">
-                            <img src="../admin/img/alarm1.png" alt="">
-                        </a>
+                        <a href="../../member/views/admin.html">관리자</a>
                     </li>
                     <li>
-                        <a href="../main/main.html">로그아웃</a>
+                        <a href="../../main/project/main.html">로그아웃</a>
                     </li>
                 </ul>
             </div>
@@ -49,10 +48,10 @@
 
     <main>
         <div class="main-container">
-          
+
                 <div class="main-box1-titlebox">
                     <div class="main-box1-title">
-                        관리자 &gt; 회원관리</div>
+                        관리자 &gt; 회원 & 게시 글 관리 </div>
                     </div>
                 <div class="main-box1-content">
                             <div class="main-box3-searchbox">
@@ -134,7 +133,7 @@
                         </div>
 
                             <div class="main-box3-1-content-title">
-                            <a href="../community/adminReadNT.html">
+                            <a href="../../board/views/adminReadNT.html">
                                 요즘 근손실 너무 심한데 저 어떻하죠? ㅜㅜ
                             </a>
                             </div>
@@ -155,7 +154,7 @@
                         냐하하핳
                         </div>
                         <div class="main-box3-1-content-title">
-                        <a href="../community/adminReadNT.html">
+                        <a href="../../board/views/adminReadNT.html">
                             헬린이 여자 근유통이 빡센데 원래 이런가요
                         </a>
                         </div>
@@ -176,7 +175,7 @@
                         냐하하핳
                         </div>
                         <div class="main-box3-1-content-title">
-                        <a href="../community/adminReadNT.html">
+                        <a href="../../board/views/adminReadNT.html">
                             오늘 가입 했어요 >_< 잘부탁드립니다
                         </a>
                         </div>
@@ -236,7 +235,7 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="/main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/project/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
