--- a/css/admin.css
+++ b/css/admin.css
@@ -108,7 +108,22 @@ main{
   align-items: center;
   margin-top: 30px;
 }
+.header-box2{
+  width: 230px;
+  height: 30px;
+  /* background-color: blueviolet; */
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0 10px;
+}
+.header-box2-img{
+height: 18px;
+width: 18px;
 
+display: flex;
+}
 
 
 .main-box1-title{
