페이지,이미지 경로 재설정 /  js 파일  따로 생성 /  자유게시판 작성글 읽기 페이지에 신고버튼 추가

--- a/board/views/adminReadNT.html
+++ b/board/views/adminReadNT.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(관리자)공지사항 내 글 보기</title>
-    <link rel="stylesheet" href="adminReadNT.css">
+    <link rel="stylesheet" href="../../css/adminReadNT.css">
+    <script defer src="../../js/adminReadNT.js"></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
-                            <a href="./community.html">커뮤니티</a>
+                            <a href="../pro/community.html">커뮤니티</a>
                         </li>
                     </ul>
                 </div>
@@ -25,10 +26,10 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../admin/admin.html">관리자님</a>
+                        <a href="../../member/views/admin.html">관리자님</a>
                     </li>
                     <li>
-                        <a href="../main/main.html">로그아웃</a>
+                        <a href="../../main/pro/main.html">로그아웃</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +39,7 @@
         <div class="main-container">
             <div class="main-box1">
                 <div class="main-box1-titlebox">
-                    <div class="main-box1-title"><div id="title1"><a href="./community.html">커뮤니티</a></div><div id="title2">&gt;</div><div id="title2"><a href="./notice.html">공지사항</a></div></div>
+                    <div class="main-box1-title"><div id="title1"><a href="../pro/community.html">커뮤니티</a></div><div id="title2">&gt;</div><div id="title2"><a href="../pro/notice.html">공지사항</a></div></div>
                 </div>
                 <div class="writing-title-box">
                     <div class="writing-title">글제목</div>
@@ -53,9 +54,9 @@
             </div> 
             <div class="main-box2">
                 <div class="main-box2-list-button">
-                    <button id="listbutton1"><a id="" href="./notice.html">목록</a></button>
+                    <button id="listbutton1"><a id="" href="../pro/notice.html">목록</a></button>
                     <button id="listbutton2"><a id="" href="./adminRewriting.html">수정</a></button>
-                    <button id="listbutton3" onclick="call_confirm()"><a id="" href="./notice.html">삭제</a></button>
+                    <button id="listbutton3" onclick="call_confirm()"><a id="" href="../pro/notice.html">삭제</a></button>
                 </div>
             </div>
             <!-- <div class="main-box3">
@@ -113,20 +114,10 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
     </footer>
-    <script>
-        function call_confirm(){
-            if(confirm("글을 삭제하시겠습니까?")){
-                alert("글이 삭제되었습니다.");
-                location.href="./notice.html";
-            }else{
-                alert("글 삭제가 취소되었습니다.");
-            }
-        }
-    </script>
 </body>
 </html>
