--- a/board/views/readingMy.html
+++ b/board/views/readingMy.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>내 글 보기</title>
-    <link rel="stylesheet" href="readingMy.css">
+    <link rel="stylesheet" href="../../css/readingMy.css">
+    <script defer src="../../js/readingMy.js"></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="header-box1">
-                <div class="logo"><a href="../main/main.html"><img src="./img/logo.png" alt=""></a></div>
+                <div class="logo"><a href="../../main/pro/main.html"><img src="../../img/logo.png" alt=""></a></div>
                 <div class="header-nav">
                     <ul class="header-nav">
                         <li>
-                            <a href="../hmap/hmap.html">우리동네 헬스장</a>
+                            <a href="../../hmap/hmap.html">우리동네 헬스장</a>
                         </li>
                         <li>
-                            <a href="./community.html">커뮤니티</a>
+                            <a href="../pro/community.html">커뮤니티</a>
                         </li>
                     </ul>
                 </div>
@@ -25,10 +26,10 @@
             <div class="header-box2">
                 <ul class="header-box2">
                     <li>
-                        <a href="../mypage/mypage.html">이지윤님</a>
+                        <a href="../../member/views/mypage.html">이지윤님</a>
                     </li>
                     <li>
-                        <a href="../main/main.html">로그아웃</a>
+                        <a href="../../main/pro/main.html">로그아웃</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +39,7 @@
         <div class="main-container">
             <div class="main-box1">
                 <div class="main-box1-titlebox">
-                    <div class="main-box1-title"><div id="title1"><a href="./community.html">커뮤니티</a></div><div id="title2">&gt;</div><div id="title2"><a href="./freeBoard.html">자유게시판</a></div></div>
+                    <div class="main-box1-title"><div id="title1"><a href="../pro/community.html">커뮤니티</a></div><div id="title2">&gt;</div><div id="title2"><a href="../pro/freeBoard.html">자유게시판</a></div></div>
                 </div>
                 <div class="writing-title-box">
                     <div class="writing-title">글제목</div>
@@ -53,9 +54,9 @@
             </div> 
             <div class="main-box2">
                 <div class="main-box2-list-button">
-                    <button id="listbutton1"><a id="" href="./freeBoard.html">목록</a></button>
-                    <button id="listbutton2"><a id="" href="./rewriting.html">수정</a></button>
-                    <button id="listbutton3"  onclick="call_confirm1()"><a id="" href="./freeBoard.html">삭제</a></button>
+                    <button id="listbutton1"><a id="" href="../pro/freeBoard.html">목록</a></button>
+                    <button id="listbutton2"><a id="" href="../views/rewriting.html">수정</a></button>
+                    <button id="listbutton3"  onclick="call_confirm1()"><a id="" href="../pro/freeBoard.html">삭제</a></button>
                 </div>
             </div>
             <div class="main-box3">
@@ -92,7 +93,7 @@
                            <textarea class="writing-comment-box" name="" id=""=></textarea>
                             <div class="comment-button-box">
                                 <div class="comment-savebutton">
-                                    <button><a id="commentbutton" href="./readingMy.html">댓글등록</a></button>
+                                    <button><a id="commentbutton" href="../views/readingMy.html"">댓글등록</a></button>
                                 </div>
                             </div>
                         </form>
@@ -113,17 +114,10 @@
             <div class="footer-02-01">
                 <div>ⓒ2023 OWW All Rights Reserved</div>
                 <div>
-                    <a href="../main/privacy.html">개인정보처리방침</a>
+                    <a href="../../main/pro/privacy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
     </footer>
-    <script>
-        function call_confirm1(){
-            if(confirm("글을 삭제하시겠습니까?")){
-                alert("글이 삭제되었습니다.");
-            }
-        }
-    </script>
 </body>
 </html>
