--- a/css/readingFB.css
+++ b/css/readingFB.css
@@ -193,15 +193,26 @@ main{
     align-items: center;
     border-bottom: 0.5px solid rgb(238, 238, 239);
 }
-.main-box2-list-button{
+.main-box2-buttons{
     margin: 0 10px;
+    
 }
-.main-box2-list-button button{
+#listbutton{
     width: 50px;
     height: 23px;
     background-color: black;
     color: white;
     border-radius: 2px;
+    margin: 0 5px;
+    border: none;
+}
+#notifybutton{
+    width: 70px;
+    height: 23px;
+    background-color: red;
+    color: white;
+    border-radius: 2px;
+    border: none;
 }
 .main-box3{
     width: 980px;
